--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-rest-framework==0.1.0
 djangorestframework==3.14.0
 idna==3.4
 Pillow==10.1.0
+PySimpleGUI==4.60.5
 pytz==2023.3.post1
 requests==2.31.0
 sqlparse==0.4.4
